--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
+pre/
 .eunit
 deps
 priv
 *.o
 *.beam
 *.plt
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
